Update pricing to $5/month

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <div class="pricing-card featured fade-up">
           <div class="pricing-badge">Most Popular</div>
           <h3>Premium</h3>
-          <div class="pricing-price">$10 <span>/ month</span></div>
+          <div class="pricing-price">$5 <span>/ month</span></div>
           <div class="pricing-subtitle">7-day free trial, cancel anytime</div>
           <ul class="pricing-features">
             <li>Everything in Free</li>
@@ -374,10 +374,10 @@
             <li>Adjust activities and scripts in real time</li>
             <li>Plan my time &mdash; custom plans for trips, weekends, and open afternoons</li>
           </ul>
-          <a href="https://buy.stripe.com/fZubJ29F81YJcHyesp9MY00" class="pricing-cta cta-premium">Start Free Trial</a>
+          <a href="https://buy.stripe.com/cNi3cwdVo1YJ22U5VT9MY01" class="pricing-cta cta-premium">Start Free Trial</a>
         </div>
       </div>
-      <p class="pricing-note fade-up">Premium includes a 7-day free trial. After that, it's $10.00 USD/month via Stripe. Cancel anytime from your account &mdash; no fees, no questions asked.</p>
+      <p class="pricing-note fade-up">Premium includes a 7-day free trial. After that, it's $5.00 USD/month via Stripe. Cancel anytime from your account &mdash; no fees, no questions asked.</p>
     </div>
   </section>
 
@@ -419,11 +419,11 @@
 
       <h3>Free and Premium Plans</h3>
       <p>ParentFlare offers a free tier that includes access to 85+ curated activities, AI-generated custom activities, and AI-generated coaching scripts. No account or payment is required to use the free tier.</p>
-      <p>ParentFlare Premium is an optional paid subscription at $10.00 USD per month. Premium adds follow-up AI conversations (up to 5 turns per session) for the activity generator and coaching script features, plus "Plan my time" &mdash; an AI-powered trip and day planner that creates custom activity plans. Premium subscriptions are processed securely through Stripe.</p>
+      <p>ParentFlare Premium is an optional paid subscription at $5.00 USD per month. Premium adds follow-up AI conversations (up to 5 turns per session) for the activity generator and coaching script features, plus "Plan my time" &mdash; an AI-powered trip and day planner that creates custom activity plans. Premium subscriptions are processed securely through Stripe.</p>
 
       <h3>Billing and Cancellation</h3>
       <p>Premium subscriptions begin with a 7-day free trial. After the trial, you are billed monthly on the date your trial ends. You may cancel your subscription at any time through your Stripe Customer Portal (accessible via the "Premium" badge in the app). If you cancel during the trial, you will not be charged. When you cancel after the trial, your Premium access continues until the end of your current billing period. There are no cancellation fees, no long-term commitments, and no questions asked.</p>
-      <p>Because ParentFlare Premium provides immediate access to AI-generated content upon subscription, refunds are generally not provided for partial billing periods. If you experience a technical issue that prevents you from using Premium features, please contact us at <a href="mailto:hello@parentflare.com">hello@parentflare.com</a> and we will make it right.</p>
+      <p>Because ParentFlare Premium provides immediate access to AI-generated content upon subscription, refunds are generally not provided for partial billing periods. If you experience a technical issue that prevents you from using Premium features, please contact us at <a href="/cdn-cgi/l/email-protection#0d65686161624d7d6c7f6863796b616c7f68236e6260"><span class="__cf_email__" data-cfemail="94fcf1f8f8fbd4e4f5e6f1fae0f2f8f5e6f1baf7fbf9">[email&#160;protected]</span></a> and we will make it right.</p>
 
       <h3>AI-Generated Content</h3>
       <p>The "Make me one," "Plan my time," and "Find the words" features use AI (powered by Anthropic's Claude) to generate custom activities, plans, and parenting scripts. AI-generated content is provided as suggestions only. You know your child best &mdash; always use your own judgment before applying any suggestion. ParentFlare is not responsible for outcomes resulting from the use of AI-generated content.</p>
@@ -435,7 +435,7 @@
       <p>We may update these terms from time to time. If we make significant changes, we will update the "Last updated" date above. Your continued use of ParentFlare after changes constitutes acceptance of the updated terms.</p>
 
       <h3>Contact</h3>
-      <p>Questions about these terms? Email us at <a href="mailto:hello@parentflare.com">hello@parentflare.com</a>.</p>
+      <p>Questions about these terms? Email us at <a href="/cdn-cgi/l/email-protection#94fcf1f8f8fbd4e4f5e6f1fae0f2f8f5e6f1baf7fbf9"><span class="__cf_email__" data-cfemail="d4bcb1b8b8bb94a4b5a6b1baa0b2b8b5a6b1fab7bbb9">[email&#160;protected]</span></a>.</p>
 
       <hr class="legal-divider">
 
@@ -457,13 +457,13 @@
       <p>ParentFlare uses the following third-party services: <strong>Stripe</strong> for payment processing, <strong>Supabase</strong> for database hosting, <strong>Vercel</strong> for app hosting and analytics, <strong>PostHog</strong> for anonymous product analytics, <strong>Anthropic</strong> for AI-generated content (your prompts are sent to Anthropic's API to generate responses), and <strong>Google Fonts</strong> for typography. Each service's own privacy policy governs how they handle data.</p>
 
       <h3>Data Retention</h3>
-      <p>If you cancel your Premium subscription, your email and subscription record remain in our database in case you resubscribe. If you would like your data deleted entirely, email <a href="mailto:hello@parentflare.com">hello@parentflare.com</a> and we will remove it within 30 days.</p>
+      <p>If you cancel your Premium subscription, your email and subscription record remain in our database in case you resubscribe. If you would like your data deleted entirely, email <a href="/cdn-cgi/l/email-protection#86eee3eaeae9c6f6e7f4e3e8f2e0eae7f4e3a8e5e9eb"><span class="__cf_email__" data-cfemail="c8a0ada4a4a788b8a9baada6bcaea4a9baade6aba7a5">[email&#160;protected]</span></a> and we will remove it within 30 days.</p>
 
       <h3>Children's Privacy</h3>
       <p>ParentFlare is designed for parents and caregivers, not for use by children. We do not knowingly collect personal information from children under 13. If you believe a child has provided us with personal information, please contact us and we will delete it promptly.</p>
 
       <h3>Contact</h3>
-      <p>Privacy questions? Email us at <a href="mailto:hello@parentflare.com">hello@parentflare.com</a>.</p>
+      <p>Privacy questions? Email us at <a href="/cdn-cgi/l/email-protection#a3cbc6cfcfcce3d3c2d1c6cdd7c5cfc2d1c68dc0ccce"><span class="__cf_email__" data-cfemail="630b060f0f0c23130211060d17050f0211064d000c0e">[email&#160;protected]</span></a>.</p>
     </div>
   </section>
 
@@ -477,28 +477,8 @@
       <a href="#terms">Terms</a>
       <a href="#privacy">Privacy</a>
     </div>
-    <p class="footer-contact">Questions? <a href="mailto:hello@parentflare.com">hello@parentflare.com</a></p>
+    <p class="footer-contact">Questions? <a href="/cdn-cgi/l/email-protection#2149444d4d4e61514053444f55474d4053440f424e4c"><span class="__cf_email__" data-cfemail="7018151c1c1f30001102151e04161c1102155e131f1d">[email&#160;protected]</span></a></p>
     <p class="copyright">&copy; 2026 ParentFlare. Built by parents, for parents.</p>
   </footer>
 
-  <script>
-    var nav = document.getElementById('nav');
-    window.addEventListener('scroll', function() { nav.classList.toggle('scrolled', window.scrollY > 60); });
-
-    document.addEventListener('DOMContentLoaded', function() {
-      var els = document.querySelectorAll('.fade-up');
-      els.forEach(function(el) { el.classList.add('waiting'); });
-      var observer = new IntersectionObserver(function(entries) {
-        entries.forEach(function(entry) {
-          if (entry.isIntersecting) {
-            entry.target.classList.remove('waiting');
-            entry.target.classList.add('visible');
-            observer.unobserve(entry.target);
-          }
-        });
-      }, { threshold: 0.15 });
-      els.forEach(function(el) { observer.observe(el); });
-    });
-  </script>
-</body>
-</html>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></s
